# kimm_spot_kinova

./: README.md
aruco_mapping/: CMakeLists.txt
aruco_mapping/data/: kinova.ini  kinova_hd.ini  spot_frontleft.ini
aruco_mapping/include/: aruco_mapping.h
aruco_mapping/launch/: aruco_mapping.launch  kinova_1280_marker.launch  kinova_marker.launch  mech_img_pub.launch  mech_marker.launch  rs_d400.launch  rs_marker.launch  spot_marker.launch
aruco_mapping/src/: aruco_mapping.cpp
config/ros_control/: ros_control.yaml
docker/: Dockerfile  build.sh  run.ps1  run.sh
kimm_spot_kinova/: CMakeLists.txt  package.xml
kimm_spot_kinova/include/kimm_spot_kinova/: config.hpp
kimm_spot_kinova/include/kimm_spot_kinova/formulation/: inverse_dynamics_formulation_base.hpp  inverse_dynamics_formulation_vel.hpp
kimm_spot_kinova/include/kimm_spot_kinova/math/: constraint_base.hpp  constraint_bound.hpp  constraint_equality.hpp  constraint_inequality.hpp  fwd.hpp  util.hpp
kimm_spot_kinova/include/kimm_spot_kinova/robots/: fwd.hpp  robot-wrapper.hpp
kimm_spot_kinova/include/kimm_spot_kinova/solver/: fwd.hpp  solver_HQP_base.hpp  solver_HQP_eiquadprog.hpp  solver_HQP_eiquadprog_fast.hpp  solver_HQP_eiquadprog_rt.hpp  solver_HQP_eiquadprog_rt.hxx  solver_HQP_factory.hpp  solver_HQP_factory.hxx  solver_HQP_output.hpp  util.hpp
kimm_spot_kinova/include/kimm_spot_kinova/tasks/: fwd.hpp  task_base.hpp  task_joint_posture.hpp  task_motion.hpp  task_se3_equality.hpp
kimm_spot_kinova/include/kimm_spot_kinova/trajectories/: trajectory_base.hpp  trajectory_euclidian.hpp  trajectory_se3.hpp
kimm_spot_kinova/include/kimm_spot_kinova/util/: stop_watch.hpp
kimm_spot_kinova/include/kimm_spot_kinova/utilities/: kinova_utilities.hpp  math_functions.hpp
kimm_spot_kinova/launch/: unittest_joy_spot_kinova.launch  unittest_kinova.launch  unittest_spot_kinova.launch
kimm_spot_kinova/launch/include/: backup_move_base.launch  move_base.launch
kimm_spot_kinova/src/formulation/: inverse_dynamics_formulation_base.cpp  inverse_dynamics_formulation_vel.cpp
kimm_spot_kinova/src/math/: constraint_base.cpp  constraint_bound.cpp  constraint_equality.cpp  constraint_inequality.cpp  util.cpp
kimm_spot_kinova/src/robots/: robot-wrapper.cpp
kimm_spot_kinova/src/solver/: solver_HQP_base.cpp  solver_HQP_eiquadprog.cpp  solver_HQP_eiquadprog_fast.cpp  solver_HQP_factory.cpp
kimm_spot_kinova/src/tasks/: task_base.cpp  task_joint_posture.cpp  task_motion.cpp  task_se3_equality.cpp
kimm_spot_kinova/src/trajectories/: trajectory_euclidian.cpp  trajectory_se3.cpp
kimm_spot_kinova/src/util/: statistics.cpp  stop_watch.cpp
kimm_spot_kinova/src/utilities/: kinova_utilities.cpp  math_functions.cpp  urdf_to_pin.cpp
kimm_spot_kinova/unittest/: hqp_test.cpp
kimm_spot_teleop/: CMakeLists.txt  package.xml  setup.py
kimm_spot_teleop/launch/: teleop.launch
spot_chicken_head/: CMakeLists.txt  package.xml
spot_chicken_head/include/: chicken_head.h  math_helper.h
spot_chicken_head/launch/: demo.launch  demo_real.launch
spot_chicken_head/src/: chicken_head.cpp  chicken_head_node.cpp  math_helper.cpp
spot_chicken_head/unittest/: chicken_spot_test.py
spot_gazebo/: CMakeLists.txt  config.json  package.xml
spot_gazebo/config/ros_control/: ros_control_arm.yaml
spot_gazebo/launch/: bringup.launch  gazebo.launch  navigate.launch  slam.launch  spawn_robot.launch
spot_gazebo/launch/include/: move_base.launch
spot_gazebo/worlds/: default.world
spot_gui_bridge/: CMakeLists.txt  package.xml
spot_gui_bridge/gui/: index.html  manipulation.html  manipulation_sim.html  mission.html  navigation.html  navigation_sim.html  parts_delivery.html  perception.html  real.html  run_httpd.sh  (+3 more)
spot_kinova_description/: CMakeLists.txt  package.xml
spot_kinova_framework/: CMakeLists.txt  package.xml
spot_kinova_framework/include/spot_kinova_framework/controller/: controller.hpp
spot_kinova_framework/include/spot_kinova_framework/real/: real.hpp
spot_kinova_framework/include/spot_kinova_framework/servers/: action_server_base.hpp  body_posture_action_server.hpp  gripper_action_server.hpp  joint_posture_action_server.hpp  predefined_posture_action_server.hpp  qr_action_server.hpp  qr_pick_action_server.hpp  qr_walk_action_server.hpp  se3_action_server.hpp  se3_array_action_server.hpp  walk_action_server.hpp  walk_simulation_action_server.hpp  wholebody_action_server.hpp
spot_kinova_framework/include/spot_kinova_framework/simulation/: simulation.hpp
spot_kinova_framework/include/spot_kinova_framework/utilities/: kinova_utilities.hpp  pseudo_inversion.hpp
spot_kinova_framework/launch/: real.launch  simulation.launch
spot_kinova_framework/python_client/: qr_publisher.py  real.py  real2.py  real3.py  real4.py  real5.py  real6.py  real7.py  real8.py  simulation.py  ui_server_real.py  ui_server_sim.py
spot_kinova_framework/pythyon_client/: real.py  simple_action.py  simulation.py
spot_kinova_framework/src/controller/: controller.cpp
spot_kinova_framework/src/real/: real.cpp
spot_kinova_framework/src/servers/: body_posture_action_server.cpp  gripper_action_server.cpp  joint_posture_action_server.cpp  predefined_posture_action_server.cpp  qr_action_server.cpp  qr_pick_action_server.cpp  qr_walk_action_server.cpp  se3_action_server.cpp  se3_array_action_server.cpp  walk_action_server.cpp  walk_simulation_action_server.cpp  wholebody_action_server.cpp
spot_kinova_framework/src/simulation/: simulation.cpp
spot_kinova_framework/src/utilities/: kinova_utilities.cpp
spot_kinova_msgs/: CMakeLists.txt  package.xml
spot_kinova_msgs/action/: BodyPosture.action  Gripper.action  JointPosture.action  PredefinedPosture.action  QR.action  QRPick.action  SE3.action  SE3Array.action  Walk.action  Wholebody.action
spot_kinova_msgs/srv/: UiCmd.srv
spot_kinova_smach/: CMakeLists.txt  package.xml  setup.py
spot_kinova_smach/src/: task_manager_simul.py
spot_kinova_smach/src/states/: string_transition_state.py
spot_teleop/: CMakeLists.txt  package.xml  setup.py
urdf/: CMakeLists.txt  package.xml
(+23 files in other folders)
