<?xml version="1.0"?>
<package format="2">
  <name>kimm_spot_kinova</name>
  <version>0.0.1</version>
  <description>The kimm_spot_kinova package</description>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>eigen</build_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>pinocchio</depend>
  <depend>spot_msgs</depend>
  <depend>kimm_trajectory_smoother</depend>
  <depend>eiquadprog</depend>
  
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
  </export>
</package>
