<?xml version="1.0"?>
<package format="2">
  <name>spot_chicken_head</name>
  <version>0.1.0</version>
  <description>Chicken Head Demo</description>

  <maintainer email="kim87@todo.todo">Sanghyun Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>champ_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>eigen</depend>
  <depend>pinocchio</depend>

  <exec_depend>numpy</exec_depend>
</package>
