<?xml version="1.0"?>
<package format="2">
  <name>spot_gazebo</name>
  <version>0.1.0</version>
  <description>spot Champ Config Package</description>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>
  <author>Juan Miguel Jimeno</author>
  <author>Sanghyun Kim</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>champ_base</exec_depend>
  
</package>