<?xml version="1.0"?>
<package format="2">
  <name>spot_kinova_msgs</name>
  <version>0.0.1</version>
  <description>The spot_kinova msgs package</description>

  <maintainer email="kim87@kimm.re.kr">Sanghyun Kim</maintainer>

  <license>BSD</license>

  <author email="kim87@kimm.re.kr">Sanghyun Kim</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <export>
  </export>
</package>

